WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305810
Address some unsafe cast warnings in Source/WebCore/layout
https://bugs.webkit.org/show_bug.cgi?id=305810
Summary
Address some unsafe cast warnings in Source/WebCore/layout
Chris Dumez
Reported
2026-01-19 20:30:32 PST
Address some unsafe cast warnings in Source/WebCore/layout.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-19 20:47:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56874
EWS
Comment 2
2026-01-20 00:14:47 PST
Committed
305861@main
(1d511d6cf0ce): <
https://commits.webkit.org/305861@main
> Reviewed commits have been landed. Closing PR #56874 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-20 00:15:14 PST
<
rdar://problem/168484758
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug