Address some unsafe cast warnings in Source/WebCore/layout https://bugs.webkit.org/show_bug.cgi?id=305810

Reviewed by Anne van Kesteren.

* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/html/HTMLTableColElement.h:
(isType):
* Source/WebCore/layout/layouttree/LayoutIterator.h:
(WebCore::Layout::Traversal::firstChild):
(WebCore::Layout::Traversal::nextSibling):
(WebCore::Layout::Traversal::firstWithin):
(WebCore::Layout::Traversal::next):
(WebCore::Layout::Traversal::nextSkippingChildren):
(WebCore::Layout::isLayoutBoxOfType): Deleted.
* Source/WebCore/layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createLayoutBox):

Canonical link: https://commits.webkit.org/305861@main